--- a/Map Data/VermilionCity.yml
+++ b/Map Data/VermilionCity.yml
@@ -145,7 +145,7 @@ Location:
                 FlagReqs:
                     - Saffron City
                     - Lavender Town
-                    - Power Plant Activated
+                    - Kanto Power Restored
                 ItemReqs:
                     - Machine Part
                 FlagsSet:
