Fix issues with Tin Tower modifiers when disabled showing warnings and bad handling. Fix dummy items not setting correctly in limited modes. Fix flag handling for Phones. Fix hint behaviour with All X Items. Fix warp group issue with Lighthouse 4F. Fix tourney settings for hints. Fix logical interaction between left-entry of Viridian and Machine Part. Fix hint issues with data. Fix issues with bonus items added being removed after a failed pass.

--- a/Map Data/RuinsOfAlph.yml
+++ b/Map Data/RuinsOfAlph.yml
@@ -632,6 +632,7 @@ Location:
                 WildTableList: 
                 LocationReqs: Ruins of Alph Ho Oh Chamber Access
                 FlagReqs:
+                    - Banned
                 ItemReqs:
                 FlagsSet:
                 NormalItem: 
