--- a/Map Data/SpecialFlagsShopsanity.yml
+++ b/Map Data/SpecialFlagsShopsanity.yml
@@ -113,6 +113,7 @@ Location:
         FlagsSet:
             - All X Items
         ItemReqs:
+        RecommendedItemReqs:
             - X Attack
             - X Defend
             - X Speed
