--- a/Map Data/TinTower.yml
+++ b/Map Data/TinTower.yml
@@ -174,6 +174,7 @@ Location:
           - Tin Tower
         FlagReqs:
             - Suicune Battled
+            - Banned
         ItemReqs:
           - Clear Bell
           - Rainbow Wing
@@ -194,6 +195,7 @@ Location:
         LocationReqs:
         FlagReqs:
             - Warps
+            - Banned
         ItemReqs:
         FlagsSet:
         ReachableReqs:
@@ -212,6 +214,7 @@ Location:
         WildTableList:
         LocationReqs: Climb Tin Tower
         FlagReqs:
+            - Banned
         ItemReqs:
         FlagsSet:
         ReachableReqs:
