--- a/Modifiers/Convenience/Fly/ForceEarlyFlyTournament2023.yml
+++ b/Modifiers/Convenience/Fly/ForceEarlyFlyTournament2023.yml
@@ -31,7 +31,7 @@ Changes:
         Location: Route 26
         AddRecommendedFlagReqs:
             - Storm Badge
-        NewItemReqs:
+        AddRecommendedItemReqs:
             - Fly
     -
         Location: Victory Road
