--- a/Modifiers/Convenience/Pokedex/DexMonLockedChecks.yml
+++ b/Modifiers/Convenience/Pokedex/DexMonLockedChecks.yml
@@ -8,6 +8,7 @@ Changes:
         Location: Mon Locked Checks
         AddRecommendedFlagReqs:
             - Pokedex
+        AddRecommendedItemReqs:
             - Sweet Scent
         RemoveFlagReqs:
             - Banned
