Support latest changes to speedchoice. Add support for patches based on sjump behaviour. Add checks that warps are vanilla which doubles as another valid rom check. Fix some item names. Resolve missing conditions on Parry, remove Champion requirement from easy phone call rematches. Fix UnaffectedItems such that they are affected by item upgrades.

--- a/Map Data/MtSilver.yml
+++ b/Map Data/MtSilver.yml
@@ -140,7 +140,7 @@ Location:
                 TrainerList:
                 Sublocations:
             -
-                Name: Mt. Silver Max Protein
+                Name: Mt. Silver Protein
                 FileName: SilverCaveRoom1.asm
                 Type: Item
                 HasPKMN: No
