--- a/Modifiers/Convenience/Strong Fights/DefinitelyNoEarlySabrina.yml
+++ b/Modifiers/Convenience/Strong Fights/DefinitelyNoEarlySabrina.yml
@@ -1,5 +1,5 @@
 Name: Definitely no early Sabrina
-Description: Prevents Sabrina being required before you can access 7 other gyms
+Description: Prevents Sabrina being required before you can access 7 other badges
 Changes:
     -
         Location: Saffron City Gym Badge
