--- a/Map Data/NationalPark.yml
+++ b/Map Data/NationalPark.yml
@@ -285,8 +285,7 @@ Location:
                         checkevent EVENT_BGC_FIRST
                         iftrue BugContestResults_ReturnAfterWinnersPrize
                         setevent EVENT_BGC_FIRST
-                        ld b, 1
-                        getnum STRING_BUFFER_3
+                        getstring STRING_BUFFER_3, .FirstPlace
                         setevent EVENT_TEMPORARY_UNTIL_MAP_RELOAD_1
                         getitemname STRING_BUFFER_4, SUN_STONE
                         farwritetext ContestResults_PlayerWonAPrizeText
@@ -323,8 +322,7 @@ Location:
                         checkevent EVENT_BGC_SECOND
                         iftrue BugContestResults_ReturnAfterWinnersPrize
                         setevent EVENT_BGC_SECOND
-                        ld b, 2
-                        getnum STRING_BUFFER_3
+                        getstring STRING_BUFFER_3, .SecondPlace
                         getitemname STRING_BUFFER_4, EVERSTONE
                         farwritetext ContestResults_PlayerWonAPrizeText
                         waitbutton
@@ -362,8 +360,7 @@ Location:
                         checkevent EVENT_BGC_THIRD
                         iftrue BugContestResults_ReturnAfterWinnersPrize
                         setevent EVENT_BGC_THIRD
-                        ld b, 3
-                        getnum STRING_BUFFER_3
+                        getstring STRING_BUFFER_3, .ThirdPlace
                         getitemname STRING_BUFFER_4, GOLD_BERRY
                         farwritetext ContestResults_PlayerWonAPrizeText
                         waitbutton
